# rust-sdk

./: .gitignore  Cargo.toml  README.md
docs/: AI_DEVELOPMENT_GUIDE.md  API_RECORDS.md  API_RULES_AND_FILTERS.md  AUTHENTICATION.md  BACKUPS_API.md  CACHE_API.md  COLLECTIONS.md  COLLECTIONS_EXTRA.md  COLLECTION_API.md  CRONS_API.md  CUSTOM_TOKEN_AUTH.md  FILES.md  FILE_API.md  GRAPHQL.md  HEALTH_API.md  LANGCHAINGO_API.md  LLM_DOCUMENTS.md  LOGS_API.md  MANAGEMENT_API.md  OAUTH2_CONFIGURATION.md  PUBSUB_API.md  REALTIME.md  RELATIONS.md  SCHEMA_QUERY_API.md  SQL_TABLE_REGISTRATION.md  USERS_COLLECTION_GUIDE.md  VECTOR_API.md
src/: auth_store.rs  client.rs  errors.rs  lib.rs  request.rs  types.rs  utils.rs
src/services/: backup.rs  base.rs  batch.rs  cache.rs  collection.rs  cron.rs  file.rs  graphql.rs  health.rs  langchaingo.rs  llm_document.rs  log.rs  mod.rs  pubsub.rs  realtime.rs  record.rs  settings.rs  sql.rs  vector.rs
